src/k8s/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: pizza
  labels:
    app: website
  annotations:
    prometheus.io/scrape: 'true'
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: website
