src/k8s/k8s-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: website
  namespace: pizza
spec:
  rules:
    - host: www.bootifulmicropizza.com
      http:
        paths:
        - backend:
            serviceName: website
            servicePort: 80
